--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -687,82 +687,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "images/full.jpg\n",
-      "images/schiaparelli_enhanced-full.jpg\n",
-      "images/syrtis_major_enhanced-full.jpg\n",
-      "images/valles_marineris_enhanced-full.jpg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 2. Create a list to hold the images and titles.\n",
     "hemisphere_image_urls = []\n",
     "\n",
     "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
-    "# Parse the HTML with soup\n",
-    "html = browser.html\n",
-    "img_soup = soup(html, 'html.parser')\n",
-    "main_url = 'https://marshemispheres.com/'\n",
-    "\n",
-    "# Results returned as an iterable list\n",
-    "results = img_soup.find_all('div', class_='item')\n",
-    "\n",
-    "# Loop through returned results\n",
-    "for result in results:\n",
+    "# Create a for loop to iterate through the tags.\n",
+    "for i in range (3,7):\n",
     "    \n",
-    "    # Retrieve the titles\n",
-    "    title = result.find('h3').text\n",
+    "    # Create an empty dictionary to store the current image url and title.\n",
+    "    hemisphere = {}\n",
     "    \n",
-    "    # Get the link to go the full image site\n",
-    "    img_url = result.find('a')['href']\n",
+    "    # Finding and clicking a hemisphere link.\n",
+    "    img_thumb = browser.find_by_tag('img')[i]\n",
+    "    img_thumb.click()\n",
     "    \n",
-    "    # Creating the full_img_url\n",
-    "    full_img_url = main_url + img_url\n",
-    "    \n",
-    "    # Use browser to go to the full image url and set up the HTML parser\n",
-    "    browser.visit(full_img_url)\n",
+    "    # Parse the resulting html with soup.\n",
     "    html = browser.html\n",
-    "    img_soup = soup(html, 'html.parser')\n",
+    "    hemisphere_soup = soup(html, 'html.parser')\n",
     "    \n",
-    "    # Retrieve the full image urls\n",
-    "    hemisphere_img = img_soup.find('div',class_='downloads')\n",
-    "    hemisphere_full_img = hemisphere_img.find('a')['href']\n",
+    "    # Find the relative url for the image\n",
+    "    img_rel_url = hemisphere_soup.find('div', class_=\"downloads\").ul.li.a.get('href')\n",
     "    \n",
-    "    # Printing hemisphere_full_img\n",
-    "    print(hemisphere_full_img)\n",
+    "    # Create the absolute url for the image\n",
+    "    img_url = f'https://marshemispheres.com/{img_rel_url}'\n",
     "    \n",
-    "    # Creating hemispheres dict\n",
-    "    hemispheres = dict({'img_url':hemisphere_full_img, 'title':title})\n",
-    "  \n",
-    "    #Append the hemisphere_image_urls list\n",
-    "    hemisphere_image_urls.append(hemispheres)"
+    "    # Retrieve the title.\n",
+    "    title = hemisphere_soup.find('div', class_=\"cover\").h2.text\n",
+    "    \n",
+    "    # Save the hemisphere url and the title to the dictionary.\n",
+    "    hemisphere['img_url']= img_url\n",
+    "    hemisphere['title'] = title\n",
+    "    \n",
+    "    # Append the hemisphere dictionary to the list.\n",
+    "    hemisphere_image_urls.append(hemisphere)\n",
+    "       \n",
+    "    # Navigate back to the beginning.\n",
+    "    browser.back()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'img_url': 'images/full.jpg', 'title': 'Cerberus Hemisphere Enhanced'},\n",
-       " {'img_url': 'images/schiaparelli_enhanced-full.jpg',\n",
+       "[{'img_url': 'https://marshemispheres.com/images/full.jpg',\n",
+       "  'title': 'Cerberus Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg',\n",
        "  'title': 'Schiaparelli Hemisphere Enhanced'},\n",
-       " {'img_url': 'images/syrtis_major_enhanced-full.jpg',\n",
+       " {'img_url': 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg',\n",
        "  'title': 'Syrtis Major Hemisphere Enhanced'},\n",
-       " {'img_url': 'images/valles_marineris_enhanced-full.jpg',\n",
+       " {'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg',\n",
        "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
